Enable Thingy connection for HAR app

--- a/harapp/app/src/main/res/layout/activity_connecting.xml
+++ b/harapp/app/src/main/res/layout/activity_connecting.xml
@@ -10,7 +10,7 @@
         android:id="@+id/respeck_status_connection"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Respeck status: Disconnected"
+        android:text="Device status: Disconnected"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="20px"
@@ -20,7 +20,7 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Input the RESpeck ID or scan it"
+        android:text="Input the RESpeck/Thingy ID or scan it"
         android:layout_marginTop="100px"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,7 +42,7 @@
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Respeck ID"
+        android:text="Respeck/Thingy ID"
         app:layout_constraintStart_toStartOf="@id/respeck_code"
         app:layout_constraintEnd_toEndOf="@id/respeck_code"
         app:layout_constraintBottom_toTopOf="@id/respeck_code"/>
@@ -53,7 +53,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
-        android:hint="Scan respeck for code"
+        android:hint="Scan device for code"
         android:layout_marginTop="100px"
         app:layout_constraintBottom_toTopOf="@id/connect_button"
         app:layout_constraintEnd_toEndOf="parent"
