--- a/harapp/app/src/main/res/drawable/button_bg_round2.xml
+++ b/harapp/app/src/main/res/drawable/button_bg_round2.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_pressed="true">
+        <shape android:shape="oval">
+            <stroke android:color="#45FFC107" android:width="10dp" />
+            <solid android:color="#FFC107"/>
+            <size android:width="110dp" android:height="110dp"/>
+        </shape>
+    </item>
     <item >
         <shape android:shape="oval">
             <stroke android:color="#45FFC107" android:width="5dp" />
